# unicorn-steldex

./: .env.contracts  .gitignore  .npmrc  .vercelignore  README.md  package.json  pnpm-lock.yaml  vercel.json
.github/workflows/: ci.yml
api/: index.mjs
artifacts/api-server/: build.mjs  package.json  vitest.config.ts
artifacts/api-server/src/: app.ts  index.ts  vitest.setup.ts
artifacts/stellar-dex/: index.html  package.json  vite.config.ts  vitest.config.ts
artifacts/stellar-dex/src/: App.tsx  index.css
contracts/: Cargo.toml  build.sh
contracts/.cargo/: config.toml
contracts/factory/: Cargo.toml
contracts/factory/src/: lib.rs
contracts/farm/: Cargo.toml
contracts/farm/src/: lib.rs
contracts/orders/: Cargo.toml
contracts/orders/src/: lib.rs
contracts/pool/: Cargo.toml
contracts/pool/src/: lib.rs
contracts/router/: Cargo.toml
contracts/router/src/: lib.rs
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs
docs/: INTEGRATION.md  SUBMISSION.md
lib/api-spec/: openapi.yaml
lib/db/: package.json
lib/db/src/: index.ts  seed.ts
lib/db/src/schema/: index.ts  pools.ts  (+3 more)
scripts/: package.json
scripts/src/: configure-farm-pools.ts  deploy-contracts.ts  deploy-pools-direct.ts  dev-local.ts  dev-onchain.ts  fund-circle-and-seed.ts  push-vercel-env.ts  redeploy-factory.ts  redeploy-farm.ts  redeploy-orders.ts  seed-db.ts  setup-all-pools.ts  sync-contracts.ts  test-add-liquidity.ts  test-compare-footprint.ts  test-resting-order.ts  test-stake-debug.ts  test-stake-farm.ts  test-stake-fresh.ts  test-stake-prepare.ts  test-swap.ts
(+64 files in other folders)
