[workspace]
resolver = "2"
members = ["token", "factory", "pool", "router", "farm", "orders"]

[workspace.dependencies]
soroban-sdk = { version = "22", features = [] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.test]
opt-level = "z"
